--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             </div>   
         </section>
         <!-- End of Section1 -->
+        <!-- section2 -->
+        <section class="section-2">
+            <h1 class="section-heading">
+
+            </h1>
+        </section>
+        <!-- End of section2 -->
     </div>
     <script src="script.js"></script>
 </body>
