--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <i class="fas fa-arrow-right"></i>
                 </button>
             </form>
-            <p class="copyright">code&create &copy; All Rights Reserved</p>
+            <p class="copyright">mk &copy; All Rights Reserved</p>
         </section>
         <!-- End of section 4 -->
 
